--- a/blog/templates/produto.html
+++ b/blog/templates/produto.html
@@ -3,6 +3,7 @@
 <head>
     <title>Produto</title>
 </head>
+    <img src="{{ objeto_imagem_url }}" alt="Imagem">
 <body>
     <h1>Detalhes do Produto</h1>
     <p>Número do produto solicitado: {{ numero_produto }}</p>
