--- a/blog/templates/Cadastro.html
+++ b/blog/templates/Cadastro.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<!---Coding By CodingLab | www.codinglabweb.com--->
+
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <!--<title>Registration Form in HTML CSS</title>-->
-    <!---Custom CSS File--->
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
 * {
@@ -21,10 +19,10 @@ body {
   align-items: center;
   justify-content: center;
   padding: 20px;
-  background: rgb(10, 4, 37);
+  background: rgba(10, 4, 37, 1);
 }
 .container {
-  position: relative;
+  position: relative; 
   max-width: 700px;
   width: 100%;
   background: #fff;
@@ -86,7 +84,7 @@ body {
   column-gap: 5px;
 }
 .gender input {
-  accent-color: rgb(10, 7, 26);
+  accent-color: rgba(3, 1, 11, 1);
 }
 .form :where(.gender input, .gender label) {
   cursor: pointer;
@@ -115,10 +113,10 @@ body {
   border: none;
   cursor: pointer;
   transition: all 0.2s ease;
-  background: rgb(5, 2, 20);
+  background: rgba(3, 2, 10, 1);
 }
 .form button:hover {
-  background: rgb(7, 4, 19);
+  background: rgba(0, 0, 0, 1);
 }
 /*Responsive*/
 @media screen and (max-width: 500px) {
@@ -134,28 +132,28 @@ body {
   </head>
   <body>
     <section class="container">
-      <header>Registration Form</header>
+      <header>Formulario de cadastro</header>
       <form action="#" class="form">
         <div class="input-box">
-          <label>Full Name</label>
-          <input type="text" placeholder="Enter full name" required />
+          <label>Nome Completo</label>
+          <input type="text" placeholder="Digite seu nome completo:" required />
         </div>
         <div class="input-box">
-          <label>Email Address</label>
-          <input type="text" placeholder="Enter email address" required />
+          <label>Email Endereço</label>
+          <input type="text" placeholder="Digite seu Email:" required />
         </div>
         <div class="column">
           <div class="input-box">
-            <label>Phone Number</label>
-            <input type="number" placeholder="Enter phone number" required />
+            <label>Telefone</label>
+            <input type="number" placeholder="Digite Um numero para contato" required />
           </div>
           <div class="input-box">
-            <label>Birth Date</label>
+            <label>Anivessario</label>
             <input type="date" placeholder="Enter birth date" required />
           </div>
         </div>
         <div class="gender-box">
-          <h3>Gender</h3>
+          <h3>Genero</h3>
           <div class="gender-option">
             <div class="gender">
               <input type="radio" id="check-male" name="gender" checked />
@@ -165,31 +163,13 @@ body {
               <input type="radio" id="check-female" name="gender" />
               <label for="check-female">Female</label>
             </div>
-            <div class="gender">
-              <input type="radio" id="check-other" name="gender" />
-              <label for="check-other">prefer not to say</label>
-            </div>
           </div>
         </div>
         <div class="input-box address">
-          <label>Address</label>
-          <input type="text" placeholder="Enter street address" required />
-          <input type="text" placeholder="Enter street address line 2" required />
+          <label>Endereço</label>          
           <div class="column">
-            <div class="select-box">
-              <select>
-                <option hidden>Country</option>
-                <option>America</option>
-                <option>Japan</option>
-                <option>India</option>
-                <option>Nepal</option>
-              </select>
-            </div>
-            <input type="text" placeholder="Enter your city" required />
-          </div>
-          <div class="column">
-            <input type="text" placeholder="Enter your region" required />
-            <input type="number" placeholder="Enter postal code" required />
+            <input type="text" placeholder="Cep" required />
+            <input type="number" placeholder="Adicional" required />
           </div>
         </div>
         <button>Submit</button>
