--- a/blog/templates/List.html
+++ b/blog/templates/List.html
@@ -1,3 +1,183 @@
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Minecket - Shop</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../Images/bronze" type="image/x-icon">
+</head>
+<body> 
+    <nav class="nav">
+        <div class="nav-logo flex">
+            <img src="//img.freepik.com/fotos" alt="Minecket server logo" width="70px" height="70px">
+            <h1>Minecket</h1> 
+        </div>
+
+        <div class="flex">
+            <a href="../HTML/Login.html" class="nav-btn btn-login flex">
+                <span>Perfil</span>
+            </a>
+            
+            <a href="../HTML/Cart.html" class="nav-btn btn-sucess btn-cart flex">
+                <span>settings</span>
+            </a>
+        </div>
+    </nav>
+
+   
+
+    
+    <header class="header header-text">
+        <h1>Shop</h1>
+        <span>Welcome to the server store.</span>
+    </header>
+
+    
+    <main class="main">
+        <div class="container">
+            <div class="main-title flex">
+                <img src="../Images/products.webp" alt="image of box illustration">
+                <h1 class="m-desktop-title">Products</h1>
+                <h1 class="m-mobile-title">Products</h1>
+            </div>
+            
+            <div class="cards">
+                <div class="card">
+                    <img src="../Images/bronze-rank.webp" alt="Bronze VIP Illustration">
+
+                    <div class="card-content">
+                        <h2>Bronze VIP</h2>
+                        <p>USD 0.99</p>
+                    </div>
+
+                    <a class="btn btn-dark" href="#" id="buy-item-1">Buy</a>
+                    <a class="btn btn-primary" id="open-popup-1" href="#">Benefits</a>
+                </div>
+    
+                <div class="card">
+                    <img src="../Images/silver-rank.webp" alt="Image of silver VIP">
+
+                    <div class="card-content">
+                        <h2>Silver VIP</h2>
+                        <p>USD 5.99</p>
+                    </div>
+
+                    <a class="btn btn-dark" href="#" id="buy-item-2">Buy</a>
+                    <a class="btn btn-sucess" id="open-popup-2" href="#">Benefits</a>                  
+                </div>
+    
+                <div class="card">
+                    <img src="../Images/gold-rank.webp" alt="Image of gold VIP">
+
+                    <div class="card-content">
+                        <h2>Gold VIP</h2>
+                        <p>USD 9.99</p>
+                    </div>
+
+                    <a class="btn btn-dark" href="#" id="buy-item-3">Buy</a>
+                    <a class="btn btn-alert" id="open-popup-3" href="#">Benefits</a>                
+                </div>
+                      
+                <div class="card card-cosmetics">
+                    <img src="../Images/cosmetics.webp" alt="Image of cosmetics">
+                    
+                    <div class="card-content">
+                        <h2>Cosmetics</h2>
+                        <p>From USD 2.99</p>
+                    </div>
+                    
+                    <a class="btn btn-dark" href="#" id="buy-item-4">Buy</a>
+                    <a class="btn btn-outline" id="open-popup-4" href="#">Benefits</a>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    
+    <div class="overlay" id="overlay"></div>
+
+    <section class="popups">
+        <div class="popup" id="benefits-1">
+            <div class="popup-content">
+                <h1>Bronze VIP</h1>
+                <span>Benefits:</span>
+
+                <ul>
+                    <li>Early access to new minigames that will be launched in the future.</li>
+                    <li>10% discount on items in the server store.</li>
+                    <li>Access to exclusive kits.</li>
+                    <li>Prioritization in the entry queues for popular minigames.</li>
+                    <li>An exclusive Bronze emblem in the chat.</li>
+                </ul>
+        
+                <a class="btn btn-sucess" href="#" id="close-popup-1">OK</a>
+            </div>
+        </div>
+        
+        <div class="popup" id="benefits-2">
+            <div class="popup-content">
+                <h1>Silver VIP</h1>
+                <span>Benefits:</span>
+        
+                <ul>
+                    <li>All VIP Bronze advantages.</li>
+                    <li>20% discount on items in the server store.</li>
+                    <li>Access to exclusive kits.</li>
+                    <li>Access to an exclusive minigame only for Silver members.</li>
+                    <li>An exclusive Silver emblem in the chat.</li>
+                </ul>
+        
+                <a class="btn btn-sucess" href="#" id="close-popup-2">OK</a>
+            </div>
+        </div>
+        
+        <div class="popup" id="benefits-3">
+            <div class="popup-content">
+                <h1>Gold VIP</h1>
+                <span>Benefits:</span>
+        
+                <ul>
+                    <li>All VIP Silver advantages.</li>
+                    <li>50% discount on items in the server store.</li>
+                    <li>Daily rewards for logging in to the server.</li>
+                    <li>Access to an exclusive voice channel for Gold members.</li>
+                    <li>An exclusive Gold emblem in the chat.</li>
+                </ul>
+        
+                <a class="btn btn-sucess" href="#" id="close-popup-3">OK</a>
+            </div>
+        </div>
+        
+        <div class="popup" id="benefits-4">
+            <div class="popup-content">
+                <h1>Cosmetics</h1>
+                <span>Benefits:</span>
+        
+                <ul>
+                    <li>Custom special effects for your abilities and attacks.</li>
+                    <li>Custom appearance for your character.</li>
+                    <li>Custom emotes for your character.</li>
+                    <li>Custom sound effects.</li>
+                    <li>Special particles that follow your character.</li>
+                </ul>
+        
+                <a class="btn btn-sucess" href="#" id="close-popup-4">OK</a>
+            </div>
+        </div>        
+    </section>
+
+   <footer class="footer">
+            <div class="footer-items">  
+                <span class="sp-1">Qualquer duvida ou Problema, não me ligue!!!</span>
+            </div>
+        </div>
+    </footer>
+</body>
+
+
 <style>
     @import url(../Components/Palette.css);
 
@@ -18,6 +198,8 @@
     z-index: 30;
     border: 2px solid black;
     box-shadow: 0px 0px 10px;
+    font-family: 'Poppins', sans-serif;
+
 }
 
 .popup a {
@@ -38,6 +220,8 @@
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 20; 
   display: none;
+  font-family: 'Poppins', sans-serif;
+
 }
 
 .overlay-active {
@@ -58,6 +242,8 @@
     font-family: 'Panton', sans-serif;
     background-color: var(--sucess-button-bc);
     text-shadow: 0px 1.5px 0px rgb(0 0 0 / 25%);
+    font-family: 'Poppins', sans-serif;
+
 }
 
 #success-add.active {
@@ -73,6 +259,8 @@
         .popup {
             width: 230px !important;
             top: 50%;
+font-family: 'Poppins', sans-serif;
+
             left: 50%;
             transform: translate(-50%, -50%);
             margin: auto;
@@ -140,6 +328,8 @@
     border-radius: 5px;
     margin-right: 10px;
     box-shadow: 0px 0px 5px;
+    font-family: 'Poppins', sans-serif;
+
 }
 
 .main-title h1 {
@@ -252,7 +442,7 @@
 	background-position: top;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
-	background-image: url(../Sections/Assets/background.webp);
+	background-image: url(https://img.freepik.com/fotos-premium/fundo-interior-do-armazem-desfocado_269655-77409.jpg?semt=ais_hybrid&w=740&q=80);
 }
 
 .header-text {
@@ -485,6 +675,8 @@
 	color: var(--secondary-tc);
 	text-shadow: 0px 1.5px 0px #00000040;
 	transition: .4s ease-in-out;
+    font-family: 'Poppins', sans-serif;
+
 }
 
 .nav-btn span {
@@ -627,7 +819,8 @@
 	text-shadow: 0px 1.5px 0px #00000040;
 	border: 2px solid white;
 	text-align: center;
-	font-family: 'Panton';
+	font-family: 'Poppins', sans-serif;
+
 	border: 2px solid black;
 	cursor: pointer;
 }
@@ -764,273 +957,3 @@ body {
 	--alert-button-tc: #ffffff;
 }
 </style>
-
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    Default tags 
-    <meta charset="UTF-8">
-    <title>Minecket - Shop</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../Images/logo.webp" type="image/x-icon">
-
-    Stylesheets 
-    <link rel="stylesheet" href="../CSS/Base.css">
-    <link rel="stylesheet" href="../CSS/Pages/Shop.css">
-
-    <link rel="stylesheet" href="../CSS/Sections/Main.css">
-    <link rel="stylesheet" href="../CSS/Sections/Header.css">
-    <link rel="stylesheet" href="../CSS/Sections/Footer.css">
-    <link rel="stylesheet" href="../CSS/Sections/Navbar.css">
-    <link rel="stylesheet" href="../CSS/Classes/Framework.css">
-
-    Social Profile 
-    <meta property="og:title" content="Minecket - Store">
-    <meta property="og:description" content="Official store of the Minecket minigames server, buy VIPs, cosmetics, and many other products in a totally safe, fast and easy way!">
-    <meta property="og:thumbnail" content="https://images.alphacoders.com/783/thumbbig-783153.webp">
-
-
-    SEO 
-    <meta name="description" content="Official store of the Minecket minigame server, buy VIPs, Cosmetics and many more products in a totally safe, fast and easy way!">
-    <meta name="keywords" content="minecket, minecraft store, minecraft server, minecket store">
-    <meta name="author" content=""> Github:  
-    <meta name="robots" content="index, follow"> Robots indexing 
-    <meta name="googlebot" content="index, follow"> Robots indexing 
-    <link rel="canonical" href="https://minecket.vercel.app/HTML/Shop.html"> Enter your URL here  
-</head>
-
-<body>
-    Navigation Bar 
-    <nav class="nav">
-        <div class="nav-logo flex">
-            <img src="../Images/logo.webp" alt="Minecket server logo" width="70px" height="70px">
-            <h1>Minecket</h1> 
-        </div>
-
-        <div class="nav-list flex">
-            <a class="nav-item-1" href="../HTML/Index.html"><span>Home</span></a> 
-            <a class="nav-item-2" href="../HTML/Shop.html"><span>Shop</span></a>
-            <a class="nav-item-3" href="../HTML/Rules.html"><span>Rules</span></a>
-            <a class="nav-item-4" href="https://Discord.com"><span>Discord</span></a> 
-            <a class="nav-item-5" href="https://minecraftpocket-servers.com/"><span>Vote</span></a>
-        </div>
-
-        <div class="flex">
-            <a href="../HTML/Login.html" class="nav-btn btn-login flex">
-                <img src="../Images/login.webp" alt="Login icon" width="20px" height="20px">
-                <span>Login</span>
-            </a>
-            
-            <a href="../HTML/Cart.html" class="nav-btn btn-sucess btn-cart flex">
-                <img src="../Images/cart.webp" alt="Shopping cart icon" width="20px" height="20px">
-                <span>Cart</span>
-            </a>
-        </div>
-    </nav>
-
-    Navbar for mobile 
-    <section class="nav-mobile">
-        <div class="nav-mobile-title flex">
-            <div class="navbars-bars">
-                <div class="bar bar-1"></div>
-                <div class="bar bar-2"></div>
-                <div class="bar bar-3"></div>
-            </div>
-
-            <div class="navbars-title flex">
-                <img src="../Images/logo.webp" alt="Minecket server logo" width="30px" height="30px">
-                <h1>Minecket</h1>
-            </div>
-        </div>
-
-        <div class="nav-mobile-menu flex">
-            <a href="../HTML/Index.html"><span>Home</span></a> 
-            <a href="../HTML/Shop.html"><span>Shop</span></a>
-            <a href="../HTML/Rules.html"><span>Rules</span></a>
-            <a href="https://discord.com"><span>Discord</span></a> 
-            <a href="../HTML/Login.html"><span>Login</span></a>
-            <a href="../HTML/Cart.html"><span>View cart</span></a>
-            <a href="https://-servers.com/"><span>Vote</span></a>
-        </div>
-    </section>
-
-    Header 
-    <header class="header header-text">
-        <h1>Shop</h1>
-        <span>Welcome to the server store.</span>
-    </header>
-
-    Main content 
-    <main class="main">
-        <div class="container">
-            <div class="main-title flex">
-                <img src="../Images/products.webp" alt="image of box illustration">
-                <h1 class="m-desktop-title">Products</h1>
-                <h1 class="m-mobile-title">Products</h1>
-            </div>
-            
-            <div class="cards">
-                <div class="card">
-                    <img src="../Images/bronze-rank.webp" alt="Bronze VIP Illustration">
-
-                    <div class="card-content">
-                        <h2>Bronze VIP</h2>
-                        <p>USD 0.99</p>
-                    </div>
-
-                    <a class="btn btn-dark" href="#" id="buy-item-1">Buy</a>
-                    <a class="btn btn-primary" id="open-popup-1" href="#">Benefits</a>
-                </div>
-    
-                <div class="card">
-                    <img src="../Images/silver-rank.webp" alt="Image of silver VIP">
-
-                    <div class="card-content">
-                        <h2>Silver VIP</h2>
-                        <p>USD 5.99</p>
-                    </div>
-
-                    <a class="btn btn-dark" href="#" id="buy-item-2">Buy</a>
-                    <a class="btn btn-sucess" id="open-popup-2" href="#">Benefits</a>                  
-                </div>
-    
-                <div class="card">
-                    <img src="../Images/gold-rank.webp" alt="Image of gold VIP">
-
-                    <div class="card-content">
-                        <h2>Gold VIP</h2>
-                        <p>USD 9.99</p>
-                    </div>
-
-                    <a class="btn btn-dark" href="#" id="buy-item-3">Buy</a>
-                    <a class="btn btn-alert" id="open-popup-3" href="#">Benefits</a>                
-                </div>
-                      
-                <div class="card card-cosmetics">
-                    <img src="../Images/cosmetics.webp" alt="Image of cosmetics">
-                    
-                    <div class="card-content">
-                        <h2>Cosmetics</h2>
-                        <p>From USD 2.99</p>
-                    </div>
-                    
-                    <a class="btn btn-dark" href="#" id="buy-item-4">Buy</a>
-                    <a class="btn btn-outline" id="open-popup-4" href="#">Benefits</a>
-                </div>
-            </div>
-        </div>
-    </main>
-
-    Popups Overlay 
-    <div class="overlay" id="overlay"></div>
-
-    Page Popups 
-    <section class="popups">
-        <div class="popup" id="benefits-1">
-            <div class="popup-content">
-                <h1>Bronze VIP</h1>
-                <span>Benefits:</span>
-
-                <ul>
-                    <li>Early access to new minigames that will be launched in the future.</li>
-                    <li>10% discount on items in the server store.</li>
-                    <li>Access to exclusive kits.</li>
-                    <li>Prioritization in the entry queues for popular minigames.</li>
-                    <li>An exclusive Bronze emblem in the chat.</li>
-                </ul>
-        
-                <a class="btn btn-sucess" href="#" id="close-popup-1">OK</a>
-            </div>
-        </div>
-        
-        <div class="popup" id="benefits-2">
-            <div class="popup-content">
-                <h1>Silver VIP</h1>
-                <span>Benefits:</span>
-        
-                <ul>
-                    <li>All VIP Bronze advantages.</li>
-                    <li>20% discount on items in the server store.</li>
-                    <li>Access to exclusive kits.</li>
-                    <li>Access to an exclusive minigame only for Silver members.</li>
-                    <li>An exclusive Silver emblem in the chat.</li>
-                </ul>
-        
-                <a class="btn btn-sucess" href="#" id="close-popup-2">OK</a>
-            </div>
-        </div>
-        
-        <div class="popup" id="benefits-3">
-            <div class="popup-content">
-                <h1>Gold VIP</h1>
-                <span>Benefits:</span>
-        
-                <ul>
-                    <li>All VIP Silver advantages.</li>
-                    <li>50% discount on items in the server store.</li>
-                    <li>Daily rewards for logging in to the server.</li>
-                    <li>Access to an exclusive voice channel for Gold members.</li>
-                    <li>An exclusive Gold emblem in the chat.</li>
-                </ul>
-        
-                <a class="btn btn-sucess" href="#" id="close-popup-3">OK</a>
-            </div>
-        </div>
-        
-        <div class="popup" id="benefits-4">
-            <div class="popup-content">
-                <h1>Cosmetics</h1>
-                <span>Benefits:</span>
-        
-                <ul>
-                    <li>Custom special effects for your abilities and attacks.</li>
-                    <li>Custom appearance for your character.</li>
-                    <li>Custom emotes for your character.</li>
-                    <li>Custom sound effects.</li>
-                    <li>Special particles that follow your character.</li>
-                </ul>
-        
-                <a class="btn btn-sucess" href="#" id="close-popup-4">OK</a>
-            </div>
-        </div>        
-    </section>
-
-    Footer Section 
-    <footer class="footer">
-        <div class="footer-container flex">
-            <div class="footer-credits">
-                <div class="footer-credits-photo flex">
-                    <a class="flex" title="" href="https://.com/">
-                        <img class="f-h" src="../Images/.webp" alt=" profile" width="50px" height="50px">
-                        <h2></h2>
-                    </a>
-                </div>
-            </div>
-    
-            <div class="footer-items">
-                <span class="sp-1">©2023 Minecket | All Rights Reserved.</span>
-                <span class="sp-2">Minecraft is a trademark of Mojang and Minecket is not affiliated with or endorsed by Mojang.</span>
-                <span class="sp-3">Made by .</span>
-            </div>
-    
-            <div class="footer-socials flex">
-                <a href="https://discord.com" title="discord"><img class="discord-social" src="../Images/discord.webp" alt="discord logo" width="40px" height="40px"></a>
-                <a href="https://twitter.com" title="twitter"><img class="twitter-social" src="../Images/twitter.webp" alt="twitter logo" width="40px" height="40px"></a>
-                <a href="https://youtube.com" title="youtube"><img class="yt-social" src="../Images/youtube.webp" alt="youtube logo" width="40px" height="40px"></a>
-            </div>
-        </div>
-    </footer>
-
-    Alert Section 
-    <section class="alerts">
-        <div class="alerts-popup alert-popup-sucess" id="success-add">
-            <h3>Added to cart!</h2>
-        </div>
-    </section>    
-
-    <script src="../JS/Shop.js"></script>
-    <script src="../JS/General.js"></script>
-</body>
-=======
