--- a/blog/templates/List.html
+++ b/blog/templates/List.html
@@ -14,6 +14,7 @@
       --primary-button-bc: #057bad;
       --primary-button-tc: #fff;
       --sucess-button-bc: #2bff00;
+      --sucess-button-bs: #3c3c3cff;
       --sucess-button-tc: #fff;
     }
 
@@ -47,6 +48,17 @@
       text-decoration: none;
       color: var(--primary-button-tc);
       background-color: var(--primary-button-bc);
+      text-transform: uppercase;
+      transition: 0.2s;
+    }
+    .nav-btc {
+      border: 2px solid white;
+      border-radius: 5px;
+      padding: 10px 18px;
+      margin-left: 10px;
+      text-decoration: none;
+      color: var(--primary-button-tc);
+      background-color: var(--sucess-button-bs);
       text-transform: uppercase;
       transition: 0.2s;
     }
@@ -187,7 +199,7 @@
     <h1>Estoque</h1>
     <div>
       <a class="nav-btn">Perfil</a>
-      <a class="nav-btn">Settings</a>
+      <a class="nav-btc">Settings</a>
     </div>
   </nav>
 
@@ -215,7 +227,63 @@
           <button class="btn btn-sucess">Controle</button>
         </div>
       </div>
+       <div class="card">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTqamfzWp3WFWBasP48uYpX6HFo5DZ9TPjF9Q0g2TaoWSOP3Kl_E6Cm5qz5E4OXXocAY1g&usqp=CAU" alt="Café">
+        <div class="card-content">
+          <h2>Café</h2>
+          <p>30 Und</p>
+        </div>
+        <div class="card-actions">
+          <button class="btn btn-dark">Info</button>
+          <button class="btn btn-sucess">Controle</button>
+        </div>
+      </div>
+       <div class="card">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTqamfzWp3WFWBasP48uYpX6HFo5DZ9TPjF9Q0g2TaoWSOP3Kl_E6Cm5qz5E4OXXocAY1g&usqp=CAU" alt="Café">
+        <div class="card-content">
+          <h2>Café</h2>
+          <p>30 Und</p>
+        </div>
+        <div class="card-actions">
+          <button class="btn btn-dark">Info</button>
+          <button class="btn btn-sucess">Controle</button>
+        </div>
+      </div>
+       <div class="card">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTqamfzWp3WFWBasP48uYpX6HFo5DZ9TPjF9Q0g2TaoWSOP3Kl_E6Cm5qz5E4OXXocAY1g&usqp=CAU" alt="Café">
+        <div class="card-content">
+          <h2>Café</h2>
+          <p>30 Und</p>
+        </div>
+        <div class="card-actions">
+          <button class="btn btn-dark">Info</button>
+          <button class="btn btn-sucess">Controle</button>
+        </div>
+      </div>
+       <div class="card">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTqamfzWp3WFWBasP48uYpX6HFo5DZ9TPjF9Q0g2TaoWSOP3Kl_E6Cm5qz5E4OXXocAY1g&usqp=CAU" alt="Café">
+        <div class="card-content">
+          <h2>Café</h2>
+          <p>30 Und</p>
+        </div>
+        <div class="card-actions">
+          <button class="btn btn-dark">Info</button>
+          <button class="btn btn-sucess">Controle</button>
+        </div>
+      </div>
+       <div class="card">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTqamfzWp3WFWBasP48uYpX6HFo5DZ9TPjF9Q0g2TaoWSOP3Kl_E6Cm5qz5E4OXXocAY1g&usqp=CAU" alt="Café">
+        <div class="card-content">
+          <h2>Café</h2>
+          <p>30 Und</p>
+        </div>
+        <div class="card-actions">
+          <button class="btn btn-dark">Info</button>
+          <button class="btn btn-sucess">Controle</button>
+        </div>
+      </div>
     </div>
+    
 
 
 
