--- a/blog/templates/Login.html
+++ b/blog/templates/Login.html
@@ -363,7 +363,7 @@
 </style>
 
 <style>
-    @import url(../Components/Palette.css);
+    @import url();
 
 .login form {
     background-color: var(--primary-bc);
