--- a/blog/templates/Login.html
+++ b/blog/templates/Login.html
@@ -4,7 +4,7 @@
 <head>
     <!--=== Default Tags ===-->
     <meta charset="UTF-8">
-    <title>Minecket - Login</title>
+    <title> Login</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../Images/logo.webp" type="image/x-icon">
