--- a/blog/templates/List.html
+++ b/blog/templates/List.html
@@ -259,7 +259,7 @@ button.controlar:hover {
   <nav class="nav">
     <h1>Estoque</h1>
     <div>
-      <a class="nav-btn">Perfil</a>
+      <a class="nav-btn" href="./ListProduct/"  >Perfil</a>
       <a class="nav-btc">Settings</a>
     </div>
   </nav>
