--- a/blog/templates/produto.html
+++ b/blog/templates/produto.html
@@ -7,5 +7,6 @@
 <body>
     <h1>Detalhes do Produto</h1>
     <p>Número do produto solicitado: {{ numero_produto }}</p>
+    <button href="./ListProduct/" ></button>
 </body>
 </html>
