--- a/blog/templates/Login.html
+++ b/blog/templates/Login.html
@@ -487,7 +487,7 @@ body {
                 <label for="confirm">Senha:</label>
                 <input type="text" id="confirm" placeholder="Digite sua Senha" required>                
                 
-                <button type="submit">Login</button>
+                <button href="../ListProduct/" type="submit">Login</button>
             </div>
         </form>
     </section>
