--- a/blog/templates/Cadastro.html
+++ b/blog/templates/Cadastro.html
@@ -173,7 +173,8 @@ body {
             <input type="number" placeholder="Adicional" required />
           </div>
         </div>
-        <button>Submit</button>
+        <button >Submit</button>
+        <a href="{% url 'List_Product' %}">Voltar</a>
       </form>
     </section>
   </body>
