--- a/blog/templates/Cadastro.html
+++ b/blog/templates/Cadastro.html
@@ -173,8 +173,7 @@ body {
             <input type="number" placeholder="Adicional" required />
           </div>
         </div>
-        <button >Submit</button>
-        <a href="{% url 'List_Product' %}">Voltar</a>
+        <button onclick="window.location.href = '{% url 'ListOgject' %}';">Submit</button>
       </form>
     </section>
   </body>
