--- a/blog/templates/List.html
+++ b/blog/templates/List.html
@@ -191,7 +191,7 @@
   width: 250px;
   border-radius: 9px;
   border: 1px solid #ccc;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25); /* sombra mais visível */
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25); 
   overflow: hidden;
   text-align: center;
   transition: transform 0.2s ease, box-shadow 0.2s ease;
@@ -201,7 +201,7 @@
 
 .card:hover {
   transform: scale(1.02);
-  box-shadow: 0 8px 18px rgba(0, 0, 0, 0.35); /* sombra mais forte */
+  box-shadow: 0 8px 18px rgba(0, 0, 0, 0.35); 
 }
 
 .card img {
@@ -259,7 +259,7 @@ button.controlar:hover {
   <nav class="nav">
     <h1>Estoque</h1>
     <div>
-      <a class="nav-btn" href="./ListProduct/"  >Perfil</a>
+      <a class="nav-btn" href=""  >Perfil</a>
       <a class="nav-btc">Settings</a>
     </div>
   </nav>
@@ -284,7 +284,7 @@ button.controlar:hover {
 </div>
 
 
- </main>
+</main>
   <footer class="footer">
     Qualquer dúvida ou problema, não me ligue!!!
   </footer>
